tests/ui/typeck/consider-borrowing-141810-1.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/consider-borrowing-141810-1.rs:4:12
   |
LL |        let x = if true {
   |  ______________-
LL | |          &true
   | |          ----- expected because of this
LL | |      } else if false {
   | | ____________^
LL | ||         true
LL | ||     } else {
LL | ||         true
LL | ||     };
   | ||     ^
   | ||_____|
   |  |_____`if` and `else` have incompatible types
   |        expected `&bool`, found `bool`
   |
help: consider borrowing here
   |
LL ~         &true
LL |     } else {
LL ~         &true
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
