tests/ui/typeck/consider-borrowing-141810-1.rs
fn main() {
    let x = if true {
        &true
    } else if false { //~ ERROR `if` and `else` have incompatible types [E0308]
        true //~ HELP consider borrowing here
    } else {
        true
    };
}
